# limnl-app

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  MIGRATION.md  README.md  eslint.config.js  package.json  panda.config.ts  pnpm-lock.yaml  vitest.config.ts
.windsurf/rules/: bits-ui.md  code-style-guide.md  svelte.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md
scripts/: README.md  migrate-dream-analysis.ts
src/: app.css  cards.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_add_dream_metadata.sql  002_example.sql.example  003_rename_word_count_to_character_count.sql  004_add_mind_dump_analysis.sql  005_add_mind_dump_analysis_tasks.sql  006_add_mind_dump_mood_tags.sql  007_add_mind_dump_blocker_patterns.sql  README.md
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/db/: bugs.rs  cards.rs  connection.rs  creative_prompts.rs  dream_analyses.rs  dreams.rs  migrations.rs  mind_dump_analysis.rs  mind_dumps.rs  mod.rs  models.rs
src-tauri/src/llm/: client.rs  helpers.rs  mod.rs  types.rs
src-tauri/src/llm/prompts/: blocker_patterns.rs  card_commentary.rs  card_commentary_with_context.rs  creative_prompts.rs  description_optimization.rs  discovery_chat.rs  dream_analysis.rs  mind_dump_analysis.rs  mod.rs  multiple_cards_commentary.rs  title_generation.rs
src/lib/api/: bugs.ts  cards.ts  database.ts  dreams.ts  llm.ts  mind-dump.ts  mind-dumps.ts
src/lib/components/: BugNotes.svelte
src/routes/: +layout.svelte  +page.svelte
test/: card-draw.test.ts  mind-dump.test.ts
(+36 files in other folders)
